Fix winning functionality with modal and game reset. Reset button is still invisible, which is next glitch to solve

--- a/css/default-style.css
+++ b/css/default-style.css
@@ -98,7 +98,5 @@ button, select {
 };
 
 .play-again {
-	width: 100px;
-	height: 100px;
 	background-color: red;
 }
